# loaded-price-tracker

./: .gitignore  GETTING_STARTED.md  GETTING_STARTED_GITHUB.md  GETTING_STARTED_LOCAL.md  README.md
.github/workflows/: check-prices.yml
docs/: notes-cloudflare.md
examples/: Register-LoadedPriceMonitor.ps1  com.loaded.price-monitor.plist  cron.sample  loaded-price-monitor.env  loaded-price-monitor.service  loaded-price-monitor.timer
go/: go.mod  go.sum
go/cmd/loaded-go/: main.go
go/internal/banner/: banner.go  utf8_other.go  utf8_windows.go
go/internal/config/: config.go
go/internal/notifier/: notifier.go
go/internal/rules/: rules.go
go/internal/scraper/: scraper.go
go/internal/storage/: storage.go
python/: requirements.txt
python/src/: banner.py  config.py  main.py  notifier.py  rules.py  scraper.py  storage.py
rust/: Cargo.toml
rust/src/: banner.rs  config.rs  lib.rs  main.rs  notifier.rs  rules.rs  scraper.rs  storage.rs
scripts/: render_banner.py
