[package]
name = "loaded-rs"
version = "0.1.0"
edition = "2021"
description = "Loaded.com price monitor (Rust)"

[[bin]]
name = "loaded-rs"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
owo-colors = { version = "4", features = ["supports-colors"] }
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
rust_decimal = { version = "1", features = ["serde-with-str"] }
rust_decimal_macros = "1"
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
